<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_brick</name>
  <version>0.0.0</version>
  <description>Turtle brick</description>
  <maintainer email="sayantanibhattacharya2025@u.northwestern.edu">sayantani</maintainer>
  <license>MIT</license>

  <depend>sensor_msgs</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <!-- do we need these 2 lines  -->
  <!-- <exec_depend>ros2launch</exec_depend>
  <exec_depend>turtle_brick_interfaces</exec_depend> -->

  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>nav_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
